--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/file/d/1yFWNqt3FcGlzVrVG9lgj9j7deSTYj625/view?usp=sharing/</string>
+					<string>https://mohd-rahman-khan.github.io/IOS_App_Download/IndianExpress.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
