--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://mohd-rahman-khan.github.io/IOS_App_Download/IndianExpress.ipa</string>
+					<string>https://i.diawi.com/h9EE6H</string>
 				</dict>
 				<dict>
 					<key>kind</key>
