--- a/manifest.plist
+++ b/manifest.plist
@@ -1,45 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>items</key>
-	<array>
-		<dict>
-			<key>assets</key>
-			<array>
-				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>https://i.diawi.com/h9EE6H</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>display-image</string>
-					<key>url</key>
-					<string>https://drive.google.com/file/d/1j4FiWsVsP1yxhDoHm_kOCtKh5YGAqJyD/view?usp=sharing</string>
-				</dict>
-				<dict>
-					<key>kind</key>
-					<string>full-size-image</string>
-					<key>url</key>
-					<string>https://drive.google.com/file/d/1j4FiWsVsP1yxhDoHm_kOCtKh5YGAqJyD/view?usp=sharing</string>
-				</dict>
-			</array>
-			<key>metadata</key>
-			<dict>
-				<key>bundle-identifier</key>
-				<string>com.indian.express.tiedn</string>
-				<key>bundle-version</key>
-				<string>1.0</string>
-				<key>kind</key>
-				<string>software</string>
-				<key>platform-identifier</key>
-				<string>com.apple.platform.iphoneos</string>
-				<key>title</key>
-				<string>IndianExpress</string>
-			</dict>
-		</dict>
-	</array>
-</dict>
+  <dict>
+    <key>items</key>
+    <array>
+      <dict>
+        <key>assets</key>
+        <array>
+          <dict>
+            <key>kind</key>
+            <string>software-package</string>
+            <key>url</key>
+            <string>https://www.dropbox.com/scl/fi/6k9bbi6by0l5pckcmv4e8/IndianExpress.ipa?rlkey=d0z2c5gjsfo1e25se6mgvkg1x&st=88v6y62c&dl=1</string>
+          </dict>
+        </array>
+        <key>metadata</key>
+        <dict>
+          <key>bundle-identifier</key>
+          <string>com.indian.express.tiedn</string>
+          <key>bundle-version</key>
+          <string>1.0.0</string>
+          <key>kind</key>
+          <string>software</string>
+          <key>title</key>
+          <string>TIEDN</string>
+        </dict>
+      </dict>
+    </array>
+  </dict>
 </plist>
