--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,8 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string>https://ios-app-download.vercel.app/IndianExpress.ipa</string>
+            <!-- <string>https://ios-app-download.vercel.app/IndianExpress.ipa</string> -->
+            <string>http://dms.expressindia.com/IndianExpress.ipa</string>
           </dict>
         </array>
         <key>metadata</key>
