--- a/manifest.plist
+++ b/manifest.plist
@@ -12,7 +12,7 @@
             <string>software-package</string>
             <key>url</key>
             <!-- <string>https://ios-app-download.vercel.app/IndianExpress.ipa</string> -->
-            <string>http://dms.expressindia.com/IndianExpress.ipa</string>
+            <string>https://dms.expressindia.com/IndianExpress.ipa</string>
           </dict>
         </array>
         <key>metadata</key>
